major changes to all pipelines, config file, and test data 01/09/2016

--- a/config/22Gv1.0.rootingOrder.config
+++ b/config/22Gv1.0.rootingOrder.config
@@ -1,5 +1,5 @@
 ###########################################################################
-## Configuration File for Rooting RAxML Phylogenetic Trees       		 ##
+## Configuration File for Rooting RAxML Phylogenetic Trees               ##
 ## Requirements:                                                         ##
 ## A list of string fragments matching sequences identifiers of species  ##
 ## in the classification (including scaffold taxa) to be used for        ## 
@@ -12,7 +12,7 @@
 ## Author: Eric Wafula                                                   ## 
 ## Email: ekw10@psu.edu                                                  ##   
 ## Institution: Penn State University, Bio Dept, Claude dePamphilis Lab  ## 
-# Date: 01-31-2015                                                       ##
+## Date: 01-31-2015                                                      ##
 ###########################################################################
 
 [DEFAULT TAXA]
