--- a/config/22Gv1.0.singleCopy.config
+++ b/config/22Gv1.0.singleCopy.config
@@ -8,7 +8,7 @@
 ## Author: Eric Wafula                                                   ## 
 ## Email: ekw10@psu.edu                                                  ##   
 ## Institution: Penn State University, Bio Dept, Claude dePamphilis Lab  ## 
-# Date: 01-31-2015                                                       ##
+## Date: 01-31-2015                                                      ##
 ###########################################################################
 
 [DEFAULT COPIES]
