Various pipeline fixes

--- a/config/plantTribes.config
+++ b/config/plantTribes.config
@@ -24,6 +24,13 @@ transdecoder=TransDecoder.LongOrfs
 # in your PATH environment variable
 genometools=gt
 #
+# Path to HMMSearch (HMMER >=3) executables if not in your PATH
+# environment variable
+hmmsearch=hmmsearch
+#
+# Path to cap3 executables if not in your PATH environment variable
+cap3=cap3
+#
 ###########################################################################
 ## GeneFamilyClassifier                                                  ##
 ###########################################################################
