--- a/config/plantTribes.config
+++ b/config/plantTribes.config
@@ -60,8 +60,27 @@ trimal=trimal
 # in your PATH environment variable
 raxml=raxmlHPC-PTHREADS-SSE3
 #
-# Path to FastTree (FastTree version 2.1.7 SSE3) executable if not in your PATH environment
-# variable
+# Path to FastTree (FastTree version 2.1.7 SSE3) executable if not in your 
+# PATH environment variable
 fasttree=FastTreeMP
+#
+###########################################################################
+## KaKsAnalysis                                                          ##
+###########################################################################
+## Path to makeblastdb (NCBI BLAST 2.2.29+) executable if not in your PATH
+# environment variable
+makeblastdb=makeblastdb
+#
+# Path to BLASTN (NCBI BLAST 2.2.29+) executable if not in your PATH
+# environment variable
+blastn=blastn
+#
+# Path to codeml (PAML 4.8) executable if not in your PATH environment
+# variable
+codeml=codeml
+#
+# Path to EMMIX (version 1.3) executable if not in your PATH environment
+# variable
+emmix=EMMIX
 #
 ###########################################################################
